Quorum/Library/Tests/Templating/Fail/DiamondProblemWithTwoTypes_9.quorum
class main
    action Main
        D d
    end
end